After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687938 - Force Quit dialog never shown
Force Quit dialog never shown
Status: RESOLVED FIXED
Product: metacity
Classification: Other
Component: general
trunk
Other Linux
: Normal normal
: ---
Assigned To: Metacity maintainers list
Metacity maintainers list
Depends on:
Blocks:
 
 
Reported: 2012-11-08 20:08 UTC by Balló György
Modified: 2014-06-09 19:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Update meta_show_dialog for gtk's removal of --screen (7.59 KB, patch)
2012-11-08 21:21 UTC, Balló György
committed Details | Review

Description Balló György 2012-11-08 20:08:50 UTC
Currently there is no possible to kill freezed applications with metacity. When I click on the close button on the freezed app, nothing happens. In the past (in GNOME 2), a Force Quit dialog shown after a short delay, and I was able to force quit the application by selecting the appropriate option.
Comment 1 Balló György 2012-11-08 21:21:35 UTC
Created attachment 228511 [details] [review]
Update meta_show_dialog for gtk's removal of --screen

I found the same problem in mutter:
 https://bugzilla.gnome.org/show_bug.cgi?id=643683

I applied the same patches on metacity, and it fixes the problem. See the attached patch.
Comment 2 Alberts Muktupāvels 2014-06-04 07:01:57 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.