Update meta_show_dialog for gtk's removal of --screen gtk3 no longer has the --screen command-line argument, which metacity was passing to zenity. Use --display (with an explicitly-specified screen number) instead. Author: Dan Winship Bug: https://bugzilla.gnome.org/show_bug.cgi?id=687938